# myxml

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
docs/: contribution_guide.md  examples.md
include/myxml/: buffer.hpp  cdata.hpp  document.hpp  element.hpp  error.hpp  exportable.hpp  interface.hpp  node.hpp  parser.hpp  printable.hpp  text.hpp  xmlfile.hpp
src/: CMakeLists.txt  buffer.cpp  cdata.cpp  document.cpp  document.hpp  element.cpp  element.hpp  error.cpp  error.hpp  exportable.cpp  exportable.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  printable.cpp  text.cpp  text.hpp  xmlfile.cpp
tests/: CMakeLists.txt  buffer_test.cpp  cdata_test.cpp  doc_test.cpp  document_test.cpp  element.cpp  element_test.cpp  exportable_test.cpp  parser.cpp  parser_test.cpp  printable_test.cpp  text_test.cpp
tests/data/: example1.xml
