include(CTest)

function(add_custom_test test_name)
    add_executable(${test_name} ${test_name}.cpp)
    target_link_libraries(${test_name} Catch2::Catch2WithMain myxml)
    target_compile_features(${test_name} PRIVATE cxx_std_17)
    target_compile_features(${test_name} PRIVATE cxx_std_17)
    add_test(NAME ${test_name} COMMAND ${test_name} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endfunction()

add_custom_test(element_test)
add_custom_test(parser_test)
add_custom_test(printable_test)
add_custom_test(document_test)
add_custom_test(buffer_test)
add_custom_test(text_test)
